# ComfyUI-FLATTEN

./: README.md  __init__.py  pyproject.toml
example_workflows/: example_flatten_batched.json  example_flatten_controlnets.json  example_flatten_depth.json
modules/: convs.py  cross_attn_down_block3d.py  cross_attn_up_block3d.py  downsample3d.py  flatten_cldm.py  fully_attention.py  patch3d.py  resnet_block3d.py  transformer3d.py  transformer_block.py  unet.py  upsample3d.py
modules_flatten/: attention.py  blocks.py  down_blocks.py  get_blocks.py  unet.py
nodes/: apply_flatten_attention_node.py  create_flow_noise_node.py  flatten_ksampler_node.py  flatten_unsampler_node.py  load_flatten_controlnet_node.py  load_flatten_model_node.py  trajectory_node.py
utils/: batching_utils.py  flow_noise.py  injection_utils.py  trajectories.py
