[project]
name = "comfyui-flatten"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/logtd/ComfyUI-FLATTEN"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FLATTEN"
Icon = ""
